--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -86,7 +86,7 @@
 </div>
 
 <a #wowsNumbersLink target="_blank" hidden="hidden" href="{{ player.region | wowsNumbers }}player/{{player.accountId}},{{player.name}}/">Link</a>
-<a *ngIf="playerIsRegionEU()" #wowsKarmaLink target="_blank" hidden="hidden" href="{{ player.region | wowsKarma }}player/{{player.accountId}},{{player.name}}/">Link</a>
+<a #wowsKarmaLink target="_blank" hidden="hidden" href="{{ player.region | wowsKarma }}player/{{player.accountId}},{{player.name}}/">Link</a>
 
 <p-contextMenu *ngIf="!player.hidden" styleClass="custom-contextmenu" [target]="el.nativeElement" appendTo="body"
   [model]="items" triggerEvent="click">
