--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -1,16 +1,16 @@
-<div class="info-wrapper"
-  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden && player.shipStats, 'no-battles': !player.bot && !player.hidden && (!player.shipStats || player.shipStats.battles <= 0), 'force-white': !config.coloredValues, 'contrast-mode': config.highContrastMode, 'normal': config.layoutMode === 'normal', 'legacy': config.layoutMode === 'legacy', 'compact': config.layoutMode === 'compact' }">
+<div class="info-wrapper" (click)="monitorComp.clickPlayer($event, player)"
+     [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden && player.shipStats, 'no-battles': !player.bot && !player.hidden && (!player.shipStats || player.shipStats.battles <= 0), 'force-white': !config.coloredValues, 'contrast-mode': config.highContrastMode, 'normal': config.layoutMode === 'normal', 'legacy': config.layoutMode === 'legacy', 'compact': config.layoutMode === 'compact' }">
   <div id="name">
     <strong>
       <span *ngIf="player.clan"
-        [style.color]="player.clan.color | sanitizeCss">[{{player.clan.tag}}]&nbsp;</span>
+            [style.color]="player.clan.color | sanitizeCss">[{{player.clan.tag}}]&nbsp;</span>
       <span>{{player.name}}</span>
     </strong>
   </div>
   <div id="ovr-winrate">
     <app-value-label label="Account Winrate" [icon]="faTrophy">
       <strong
-        [style.color]="player.overallStats?.winrateColor | sanitizeCss">{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
+              [style.color]="player.overallStats?.winrateColor | sanitizeCss">{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
     </app-value-label>
   </div>
   <div id="ovr-battles">
@@ -29,7 +29,7 @@
   <div id="winrate">
     <app-value-label label="Winrate" [icon]="faTrophy">
       <strong
-        [style.color]="player.shipStats?.winrateColor | sanitizeCss">{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
+              [style.color]="player.shipStats?.winrateColor | sanitizeCss">{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
     </app-value-label>
   </div>
   <div id="battles">
@@ -45,19 +45,19 @@
   <div id="pr">
     <app-value-label label="PR" [icon]="faExclamation">
       <span [pTooltip]="'monitor.pr.poweredBy' | translate" tooltipPosition="bottom"
-        [style.color]="player.shipStats?.personalRatingColor | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
+            [style.color]="player.shipStats?.personalRatingColor | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
     </app-value-label>
   </div>
   <div id="avg-damage">
     <app-value-label label="Avg Damage" [icon]="faFire">
       <strong
-        [style.color]="player.shipStats?.averageDamageColor | sanitizeCss">{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
+              [style.color]="player.shipStats?.averageDamageColor | sanitizeCss">{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
     </app-value-label>
   </div>
   <div id="avg-frags">
     <app-value-label label="Avg Frags" [icon]="faSkull">
       <strong
-        [style.color]="player.shipStats?.averageFragsColor | sanitizeCss">{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
+              [style.color]="player.shipStats?.averageFragsColor | sanitizeCss">{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
     </app-value-label>
   </div>
   <div id="avg-xp">
@@ -84,10 +84,3 @@
     </ng-container>
   </div>
 </div>
-
-<a #wowsNumbersLink *ngIf="!player.bot || player.hidden" target="_blank" hidden="hidden" href="{{ player.region | wowsNumbers }}player/{{player.accountId}},{{player.name}}/">Link</a>
-<a #wowsKarmaLink *ngIf="!player.bot || player.hidden" target="_blank" hidden="hidden" href="{{ player.region | wowsKarma }}player/{{player.accountId}},{{player.name}}/">Link</a>
-
-<p-contextMenu *ngIf="!player.hidden" styleClass="custom-contextmenu" [target]="el.nativeElement" appendTo="body"
-  [model]="items" triggerEvent="click">
-</p-contextMenu>
