Implement Mixed Karma metric (with separated tooltip metrics)
There it is, the final piece of the puzzle.

Karma metric is now mixed (sum of both Game + WOWS Karma metrics), colour-coded, and with a nice tooltip to get individual metrics.

The rest is all yours ;)

--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -20,7 +20,10 @@
   </div>
   <div id="karma">
     <app-value-label label="Karma" [icon]="faHeart">
-      <strong>{{player.karma}}</strong>
+      <span [pTooltip]="(('monitor.karma.game' | translate) + player.karma + '\n' + ('monitor.karma.wowsKarma' | translate) + (player.wowsKarma != null ? player.wowsKarma : 'N/A'))" 
+        tooltipPosition="bottom" [style.color]="mixedKarmaColor | sanitizeCss">
+          <strong>{{mixedKarma}}</strong>
+      </span>
     </app-value-label>
   </div>
   <div id="ship">
