--- a/src/app/components/main/topbar/topbar.component.html
+++ b/src/app/components/main/topbar/topbar.component.html
@@ -27,7 +27,7 @@
   <ng-container *isDesktop>
     <span class="forcepvp">
       <span>{{ 'monitor.forcePVP' | translate }}</span>
-      <p-inputSwitch [(ngModel)]="config.forcePVP" (onChange)="changeForcePVP()"></p-inputSwitch>
+      <p-inputSwitch [disabled]="switchDisabled" [(ngModel)]="config.forcePVP" (onChange)="changeForcePVP()"></p-inputSwitch>
     </span>
   </ng-container>
   <app-path-picker *isDesktop></app-path-picker>
