--- a/src/app/components/main/analytics-info/analytics-info.component.html
+++ b/src/app/components/main/analytics-info/analytics-info.component.html
@@ -37,11 +37,11 @@
   <strong>If you change your mind, you can always go to the settings and change the options.</strong>
 </p>
 <div class="align-right-wrapper">
-  <p-button *isBrowser [label]="'analytics.disable' | translate" [styleClass]="'ui-button-secondary'"
+  <p-button *isBrowser [label]="'analytics.disable' | translate" [styleClass]="'p-button-secondary'"
     (click)="click(1)">
   </p-button>
-  <p-button [label]="'analytics.anonymize' | translate" [styleClass]="'ui-button-secondary'" (click)="click(2)">
+  <p-button [label]="'analytics.anonymize' | translate" [styleClass]="'p-button-secondary'" (click)="click(2)">
   </p-button>
-  <p-button [label]="'analytics.okButton' | translate" [styleClass]="'ui-button-success'" (click)="click(3)">
+  <p-button [label]="'analytics.okButton' | translate" [styleClass]="'p-button-success'" (click)="click(3)">
   </p-button>
 </div>
