--- a/src/app/components/main/changelogs/changelogs.component.html
+++ b/src/app/components/main/changelogs/changelogs.component.html
@@ -25,7 +25,7 @@
 
       </li>
     </ul>
-    <button *ngIf="true" pButton type="button" icon="pi pi-check" [label]="'changelogs.markAllAsSeen' | translate" class="ui-button-success"
+    <button *ngIf="true" pButton type="button" icon="pi pi-check" [label]="'changelogs.markAllAsSeen' | translate" class="p-button-success"
       (click)="markAllAsSeen()"></button>
   </p-card>
 
