--- a/src/app/components/main/topbar/connection/qr/qr.component.html
+++ b/src/app/components/main/topbar/connection/qr/qr.component.html
@@ -1,7 +1,7 @@
 <fa-icon [icon]="closeIcon" (click)="close()"></fa-icon>
 <h2>{{ 'webConnect.desktop.title' | translate }}</h2>
 <img [src]="tokenPath" />
-<div class="ui-inputgroup u-full-width">
+<div class="p-inputgroup u-full-width">
   <input type="text" pInputText [ngModel]="tokenCopyUrl" readonly #input>
   <button (click)="copy(input)" pButton type="button" icon="pi pi-copy"></button>
 </div>
