--- a/src/app/components/main/changelogs/changelog/changelog.component.html
+++ b/src/app/components/main/changelogs/changelog/changelog.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="changelog">
-  <markdown [data]="changelog.markdown"></markdown>
+  <app-showdown [markdown]="changelog.markdown"></app-showdown>
   <div class="align-right-wrapper" *ngIf="ref">
-    <p-button [label]="'changelogs.closeButton' | translate" [styleClass]="'ui-button-success'" (click)="ref.close()">
+    <p-button [label]="'changelogs.closeButton' | translate" [styleClass]="'p-button-success'" (click)="ref.close()">
     </p-button>
   </div>
 </ng-container>
