--- a/src/app/components/main/configtool/configtool.component.html
+++ b/src/app/components/main/configtool/configtool.component.html
@@ -22,7 +22,7 @@
         <div class="options-input-wrapper"
           *ngFor="let clientPath of config.configtoolConfig.clientPaths;let i = index;">
           <label>{{ 'configtool.paths.client' | translate }} {{i+1}}</label>
-          <div class="ui-inputgroup">
+          <div class="p-inputgroup">
             <input pInputText [title]="clientPath" type="text" [disabled]="true"
               [(ngModel)]="config.configtoolConfig.clientPaths[i]">
 
@@ -120,7 +120,7 @@
 
 
     <div class="button-row">
-      <p-button (click)="start()" [label]="'configtool.start' | translate" styleClass="ui-button-success"></p-button>
+      <p-button (click)="start()" [label]="'configtool.start' | translate" styleClass="p-button-success"></p-button>
     </div>
     <div class="console-output">
       <p-scrollPanel [style]="{width: '100%', height: '100%'}">
