--- a/src/styles/changelogs.scss
+++ b/src/styles/changelogs.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .changelog-container {
 
   display: grid;
@@ -22,7 +24,7 @@
         padding: .5em 1em;
         border-bottom: 1px solid $secondaryColor;
         cursor: pointer;
-        transition: all .3em ease-in-out;
+        transition: all .3s ease-in-out;
 
         &:last-child{
           border: none;
