--- a/src/app/components/main/configtool/configtool.component.html
+++ b/src/app/components/main/configtool/configtool.component.html
@@ -16,22 +16,22 @@
         <h3>{{'configtool.headerClients' | translate}}</h3>
         <div class="options-input-wrapper">
           <label>{{ 'configtool.paths.selectedDirectory' | translate }}</label>
-          <input pInputText [title]="config.mainClient" type="text" [disabled]="true" [ngModel]="config.mainClient">
+          <input pInputText [title]="settingsService.form.mainClient.model" type="text" [disabled]="true" [value]="settingsService.form.mainClient.model">
         </div>
         <h3>{{ 'configtool.paths.instances' | translate }}</h3>
         <div class="options-input-wrapper"
-          *ngFor="let clientPath of config.configtoolConfig.clientPaths;let i = index;">
+          *ngFor="let clientPath of settingsService.form.configtoolConfig.clientPaths.model;let i = index;">
           <label>{{ 'configtool.paths.client' | translate }} {{i+1}}</label>
           <div class="p-inputgroup">
             <input pInputText [title]="clientPath" type="text" [disabled]="true"
-              [(ngModel)]="config.configtoolConfig.clientPaths[i]">
+              [(ngModel)]="settingsService.form.configtoolConfig.clientPaths.model[i]">
 
             <button pButton type="button" icon="pi pi-folder" (click)="selectPath(i)"></button>
             <button (click)="removePath(i)" pButton type="button" icon="pi pi-times"></button>
           </div>
         </div>
         <button class="addButton" pButton type="button" [label]="'configtool.paths.add'| translate" icon="pi pi-plus"
-          (click)="config.configtoolConfig.clientPaths.push('')">
+          (click)="settingsService.form.configtoolConfig.clientPaths.model.push('')">
         </button>
       </article>
       <article class="options-right settings">
@@ -45,7 +45,7 @@
               {{ 'configtool.options.maxFrameRate.summary' | translate }}
             </summary>
             <div class="input-wrap">
-              <input pInputText [(ngModel)]="config.configtoolConfig.maxFrameRate" (ngModelChange)="configChanged()"
+              <input pInputText [formControl]="settingsService.form.configtoolConfig.maxFrameRate"
                 type="number">
             </div>
           </article>
@@ -54,15 +54,14 @@
               {{ 'configtool.options.versionedReplays.caption' | translate }}
             </caption>
             <div class="checkbox">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.versionedReplaysEnabled"
-                (ngModelChange)="configChanged()"></p-inputSwitch>
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.versionedReplaysEnabled"></p-inputSwitch>
             </div>
-            <summary [class.disabled]="!config.configtoolConfig.versionedReplaysEnabled">
+            <summary [class.disabled]="!settingsService.form.model.configtoolConfig.versionedReplaysEnabled">
               {{ 'configtool.options.versionedReplays.summary' | translate }}
             </summary>
-            <div class="input-wrap" [class.disabled]="!config.configtoolConfig.versionedReplaysEnabled">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.versionedReplays" (ngModelChange)="configChanged()"
-                [disabled]="!config.configtoolConfig.versionedReplaysEnabled"></p-inputSwitch>
+            <div class="input-wrap" [class.disabled]="!settingsService.form.model.configtoolConfig.versionedReplaysEnabled">
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.versionedReplays"
+                [disabled]="!settingsService.form.model.configtoolConfig.versionedReplaysEnabled"></p-inputSwitch>
             </div>
           </article>
           <article>
@@ -70,15 +69,14 @@
               {{ 'configtool.options.maxReplaysToSave.caption' | translate }}
             </caption>
             <div class="checkbox">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.maxReplaysToSaveEnabled"
-                (ngModelChange)="configChanged()"></p-inputSwitch>
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.maxReplaysToSaveEnabled"></p-inputSwitch>
             </div>
-            <summary [class.disabled]="!config.configtoolConfig.maxReplaysToSaveEnabled">
+            <summary [class.disabled]="!settingsService.form.model.configtoolConfig.maxReplaysToSaveEnabled">
               {{ 'configtool.options.maxReplaysToSave.summary' | translate }}
             </summary>
-            <div class="input-wrap" [class.disabled]="!config.configtoolConfig.maxReplaysToSaveEnabled">
-              <input pInputText [(ngModel)]="config.configtoolConfig.maxReplaysToSave" (ngModelChange)="configChanged()"
-                type="number" [disabled]="!config.configtoolConfig.maxReplaysToSaveEnabled">
+            <div class="input-wrap" [class.disabled]="!settingsService.form.model.configtoolConfig.maxReplaysToSaveEnabled">
+              <input pInputText [formControl]="settingsService.form.configtoolConfig.maxReplaysToSave"
+                type="number" [disabled]="!settingsService.form.model.configtoolConfig.maxReplaysToSaveEnabled">
             </div>
           </article>
           <article>
@@ -86,16 +84,14 @@
               {{ 'configtool.options.streamCacheSizeKB.caption' | translate }}
             </caption>
             <div class="checkbox">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.streamCacheSizeKBEnabled"
-                (ngModelChange)="configChanged()"></p-inputSwitch>
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.streamCacheSizeKBEnabled"></p-inputSwitch>
             </div>
-            <summary [class.disabled]="!config.configtoolConfig.streamCacheSizeKBEnabled">
+            <summary [class.disabled]="!settingsService.form.model.configtoolConfig.streamCacheSizeKBEnabled">
               {{ 'configtool.options.streamCacheSizeKB.summary' | translate }}
             </summary>
-            <div class="input-wrap" [class.disabled]="!config.configtoolConfig.streamCacheSizeKBEnabled">
-              <input pInputText [(ngModel)]="config.configtoolConfig.streamCacheSizeKB"
-                (ngModelChange)="configChanged()" type="number"
-                [disabled]="!config.configtoolConfig.streamCacheSizeKBEnabled">
+            <div class="input-wrap" [class.disabled]="!settingsService.form.model.configtoolConfig.streamCacheSizeKBEnabled">
+              <input pInputText [formControl]="settingsService.form.configtoolConfig.streamCacheSizeKB" type="number"
+                [disabled]="!settingsService.form.model.configtoolConfig.streamCacheSizeKBEnabled">
             </div>
           </article>
           <article>
@@ -103,15 +99,14 @@
               {{ 'configtool.options.cacheEffects.caption' | translate }}
             </caption>
             <div class="checkbox">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.cacheEffectsEnabled"
-                (ngModelChange)="configChanged()"></p-inputSwitch>
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.cacheEffectsEnabled"></p-inputSwitch>
             </div>
-            <summary [class.disabled]="!config.configtoolConfig.cacheEffectsEnabled">
+            <summary [class.disabled]="!settingsService.form.model.configtoolConfig.cacheEffectsEnabled">
               {{ 'configtool.options.cacheEffects.summary' | translate }}
             </summary>
-            <div class="input-wrap" [class.disabled]="!config.configtoolConfig.cacheEffectsEnabled">
-              <p-inputSwitch [(ngModel)]="config.configtoolConfig.cacheEffects" (ngModelChange)="configChanged()"
-                [disabled]="!config.configtoolConfig.cacheEffectsEnabled"></p-inputSwitch>
+            <div class="input-wrap" [class.disabled]="!settingsService.form.model.configtoolConfig.cacheEffectsEnabled">
+              <p-inputSwitch [formControl]="settingsService.form.configtoolConfig.cacheEffects"
+                [disabled]="!settingsService.form.model.configtoolConfig.cacheEffectsEnabled"></p-inputSwitch>
             </div>
           </article>
         </section>
